# geoiter

./: README.md  setup.cfg
example/: aio_sample.py  basic_usage.py  dump_as_gpx.py  plotting.py  sample.py
src/geoiter/: __init__.py  geoiter.py
src/geoiter/util/: gpx.py  plot.py  ressource_example.py
test/: test_geoiter.py
