[bumpversion]
current_version = 0.1.1

[metadata]
name = geoiter
version = 0.1.1
description = A simple tool to iterate circles within given boundaries:
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
keywords = iter, geo, scraping, data
license = MIT
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
author = Simon Bauer
author_email = code@seimenadventure.de
url = https://github.com/cloasdata/geoiter

[options]
zip_safe = False
include_package_data = True
package_dir = 
	= src
packages = find:
install_requires =
	haversine >= 2.5.1
	importlib; python_version >= "3.10"

[options.packages.find]
where = src

[options.extras_require]
gpx =
	lxml >= 4.8.0

plot =
	cartopy >= 0.20.2
	descartes >= 1.1.0


overpass=
	httpx >= 0.22.0

test =
	pytest >= 7.0.0
	pytest-benchmark >= 3.4.1
